# db/sqlc/models.go
@@ -1,12 +1,25 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.20.0
+//   sqlc v1.23.0
 
 package db
 
 import (
 	"time"
+
+	"github.com/google/uuid"
 )
+
+type Session struct {
+	ID           uuid.UUID `json:"id"`
+	Username     string    `json:"username"`
+	RefreshToken string    `json:"refresh_token"`
+	UserAgent    string    `json:"user_agent"`
+	ClientIp     string    `json:"client_ip"`
+	IsBlocked    bool      `json:"is_blocked"`
+	ExpiresAt    time.Time `json:"expires_at"`
+	CreatedAt    time.Time `json:"created_at"`
+}
 
 type Todo struct {
 	ID          int64     `json:"id"`
@@ -18,10 +31,12 @@ type Todo struct {
 }
 
 type User struct {
-	ID             int64     `json:"id"`
-	Username       string    `json:"username"`
-	HashedPassword string    `json:"hashed_password"`
-	FullName       string    `json:"full_name"`
-	UpdateAt       time.Time `json:"update_at"`
-	CreatedAt      time.Time `json:"created_at"`
+	ID                int64     `json:"id"`
+	Username          string    `json:"username"`
+	HashedPassword    string    `json:"hashed_password"`
+	FullName          string    `json:"full_name"`
+	Email             string    `json:"email"`
+	UpdateAt          time.Time `json:"update_at"`
+	PasswordChangedAt time.Time `json:"password_changed_at"`
+	CreatedAt         time.Time `json:"created_at"`
 }
