# utils/error.go
@@ -1,0 +1,20 @@
+package utils
+
+import "github.com/gin-gonic/gin"
+
+func NewError(ctx *gin.Context, status int, err error) {
+	er := HTTPError{
+		Code:    status,
+		Message: err.Error(),
+	}
+	ctx.JSON(status, er)
+}
+
+func ErrorResponse(err error) gin.H {
+	return gin.H{"error": err.Error()}
+}
+
+type HTTPError struct {
+	Code    int    `json:"code" example:"400"`
+	Message string `json:"message" example:"status bad request"`
+}
